parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALIAS
    AMPERSAND
    AND
    BEGIN_KW
    BREAK
    CLASS
    CLASS_VAR
    CONSTANT
    DEFINEDQ
    DO
    ENSURE
    FALSE
    FOR
    GLOBAL_VAR
    IN
    INSTANCE_VAR
    LOGICAL_NOT
    MATCH_REGEX
    MODULE
    NEXT
    NIL
    NOT
    NOT_MATCH_REGEX
    OR
    RANGE_EXCLUSIVE
    RANGE_INCLUSIVE
    REDO
    RESCUE
    RETRY
    RETURN
    SELF
    SEMICOLON
    SUPER
    TERNARY_COLON
    TERNARY_Q
    THEN
    TRUE
    UNDEF
    UNTIL
    YIELD

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> print
Rule 5     statement -> input
Rule 6     statement -> assignment
Rule 7     statement -> expression
Rule 8     statement -> if_statement
Rule 9     statement -> function_def
Rule 10    statement -> while_statement
Rule 11    statement -> unless_statement
Rule 12    statement -> case_statement
Rule 13    print -> PUTS expression
Rule 14    input -> IDENTIFIER ASSIGN GETS DOT IDENTIFIER
Rule 15    assignment -> IDENTIFIER ASSIGN expression
Rule 16    assignment -> IDENTIFIER PLUS_ASSIGN expression
Rule 17    assignment -> IDENTIFIER MINUS_ASSIGN expression
Rule 18    assignment -> IDENTIFIER TIMES_ASSIGN expression
Rule 19    assignment -> IDENTIFIER DIVIDE_ASSIGN expression
Rule 20    assignment -> IDENTIFIER OR_ASSIGN expression
Rule 21    assignment -> IDENTIFIER AND_ASSIGN expression
Rule 22    expression -> LPAREN expression RPAREN
Rule 23    expression -> MINUS expression
Rule 24    expression -> expression PLUS expression
Rule 25    expression -> expression MINUS expression
Rule 26    expression -> expression TIMES expression
Rule 27    expression -> expression DIVIDE expression
Rule 28    expression -> expression MODULO expression
Rule 29    expression -> expression POWER expression
Rule 30    expression -> INTEGER
Rule 31    expression -> FLOAT
Rule 32    expression -> STRING
Rule 33    expression -> SYMBOL_COLON
Rule 34    expression -> IDENTIFIER
Rule 35    expression -> expression LOGICAL_AND expression
Rule 36    expression -> expression LOGICAL_OR expression
Rule 37    expression -> expression EQUAL_EQUAL expression
Rule 38    expression -> expression NOT_EQUAL expression
Rule 39    expression -> expression GREATER_THAN expression
Rule 40    expression -> expression LESS_THAN expression
Rule 41    expression -> expression GREATER_EQUAL expression
Rule 42    expression -> expression LESS_EQUAL expression
Rule 43    if_statement -> IF expression statement_list elsif_blocks_opt else_block_opt END_KW
Rule 44    unless_statement -> UNLESS expression statement_list else_block_opt END_KW
Rule 45    case_statement -> CASE expression when_blocks else_block_opt END_KW
Rule 46    when_blocks -> when_blocks when_block
Rule 47    when_blocks -> when_block
Rule 48    when_block -> WHEN expression statement_list
Rule 49    elsif_blocks_opt -> elsif_blocks
Rule 50    elsif_blocks_opt -> empty
Rule 51    elsif_blocks -> ELSIF expression statement_list elsif_blocks
Rule 52    elsif_blocks -> ELSIF expression statement_list
Rule 53    else_block_opt -> ELSE statement_list
Rule 54    else_block_opt -> empty
Rule 55    empty -> <empty>
Rule 56    function_def -> DEF IDENTIFIER LPAREN param_list_opt RPAREN statement_list END_KW
Rule 57    function_def -> DEF IDENTIFIER param_list_opt statement_list END_KW
Rule 58    param -> IDENTIFIER
Rule 59    param -> IDENTIFIER ASSIGN expression
Rule 60    param_list_opt -> param_list
Rule 61    param_list_opt -> empty
Rule 62    param_list -> param
Rule 63    param_list -> param_list COMMA param
Rule 64    while_statement -> WHILE expression statement_list END_KW
Rule 65    expression -> LBRACKET elements RBRACKET
Rule 66    elements -> elements COMMA expression
Rule 67    elements -> expression
Rule 68    elements -> empty
Rule 69    expression -> LBRACE hash_content RBRACE
Rule 70    hash_content -> hash_pair_list
Rule 71    hash_content -> <empty>
Rule 72    hash_pair_list -> hash_pair
Rule 73    hash_pair_list -> hash_pair_list COMMA hash_pair
Rule 74    hash_pair -> SYMBOL_COLON ASSIGN expression

Terminals, with rules where they appear

ALIAS                : 
AMPERSAND            : 
AND                  : 
AND_ASSIGN           : 21
ASSIGN               : 14 15 59 74
BEGIN_KW             : 
BREAK                : 
CASE                 : 45
CLASS                : 
CLASS_VAR            : 
COMMA                : 63 66 73
CONSTANT             : 
DEF                  : 56 57
DEFINEDQ             : 
DIVIDE               : 27
DIVIDE_ASSIGN        : 19
DO                   : 
DOT                  : 14
ELSE                 : 53
ELSIF                : 51 52
END_KW               : 43 44 45 56 57 64
ENSURE               : 
EQUAL_EQUAL          : 37
FALSE                : 
FLOAT                : 31
FOR                  : 
GETS                 : 14
GLOBAL_VAR           : 
GREATER_EQUAL        : 41
GREATER_THAN         : 39
IDENTIFIER           : 14 14 15 16 17 18 19 20 21 34 56 57 58 59
IF                   : 43
IN                   : 
INSTANCE_VAR         : 
INTEGER              : 30
LBRACE               : 69
LBRACKET             : 65
LESS_EQUAL           : 42
LESS_THAN            : 40
LOGICAL_AND          : 35
LOGICAL_NOT          : 
LOGICAL_OR           : 36
LPAREN               : 22 56
MATCH_REGEX          : 
MINUS                : 23 25
MINUS_ASSIGN         : 17
MODULE               : 
MODULO               : 28
NEXT                 : 
NIL                  : 
NOT                  : 
NOT_EQUAL            : 38
NOT_MATCH_REGEX      : 
OR                   : 
OR_ASSIGN            : 20
PLUS                 : 24
PLUS_ASSIGN          : 16
POWER                : 29
PUTS                 : 13
RANGE_EXCLUSIVE      : 
RANGE_INCLUSIVE      : 
RBRACE               : 69
RBRACKET             : 65
REDO                 : 
RESCUE               : 
RETRY                : 
RETURN               : 
RPAREN               : 22 56
SELF                 : 
SEMICOLON            : 
STRING               : 32
SUPER                : 
SYMBOL_COLON         : 33 74
TERNARY_COLON        : 
TERNARY_Q            : 
THEN                 : 
TIMES                : 26
TIMES_ASSIGN         : 18
TRUE                 : 
UNDEF                : 
UNLESS               : 44
UNTIL                : 
WHEN                 : 48
WHILE                : 64
YIELD                : 
error                : 

Nonterminals, with rules where they appear

assignment           : 6
case_statement       : 12
elements             : 65 66
else_block_opt       : 43 44 45
elsif_blocks         : 49 51
elsif_blocks_opt     : 43
empty                : 50 54 61 68
expression           : 7 13 15 16 17 18 19 20 21 22 23 24 24 25 25 26 26 27 27 28 28 29 29 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 44 45 48 51 52 59 64 66 67 74
function_def         : 9
hash_content         : 69
hash_pair            : 72 73
hash_pair_list       : 70 73
if_statement         : 8
input                : 5
param                : 62 63
param_list           : 60 63
param_list_opt       : 56 57
print                : 4
program              : 0
statement            : 2 3
statement_list       : 1 2 43 44 48 51 52 53 56 57 64
unless_statement     : 11
when_block           : 46 47
when_blocks          : 45 46
while_statement      : 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . print
    (5) statement -> . input
    (6) statement -> . assignment
    (7) statement -> . expression
    (8) statement -> . if_statement
    (9) statement -> . function_def
    (10) statement -> . while_statement
    (11) statement -> . unless_statement
    (12) statement -> . case_statement
    (13) print -> . PUTS expression
    (14) input -> . IDENTIFIER ASSIGN GETS DOT IDENTIFIER
    (15) assignment -> . IDENTIFIER ASSIGN expression
    (16) assignment -> . IDENTIFIER PLUS_ASSIGN expression
    (17) assignment -> . IDENTIFIER MINUS_ASSIGN expression
    (18) assignment -> . IDENTIFIER TIMES_ASSIGN expression
    (19) assignment -> . IDENTIFIER DIVIDE_ASSIGN expression
    (20) assignment -> . IDENTIFIER OR_ASSIGN expression
    (21) assignment -> . IDENTIFIER AND_ASSIGN expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . MINUS expression
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression MODULO expression
    (29) expression -> . expression POWER expression
    (30) expression -> . INTEGER
    (31) expression -> . FLOAT
    (32) expression -> . STRING
    (33) expression -> . SYMBOL_COLON
    (34) expression -> . IDENTIFIER
    (35) expression -> . expression LOGICAL_AND expression
    (36) expression -> . expression LOGICAL_OR expression
    (37) expression -> . expression EQUAL_EQUAL expression
    (38) expression -> . expression NOT_EQUAL expression
    (39) expression -> . expression GREATER_THAN expression
    (40) expression -> . expression LESS_THAN expression
    (41) expression -> . expression GREATER_EQUAL expression
    (42) expression -> . expression LESS_EQUAL expression
    (65) expression -> . LBRACKET elements RBRACKET
    (69) expression -> . LBRACE hash_content RBRACE
    (43) if_statement -> . IF expression statement_list elsif_blocks_opt else_block_opt END_KW
    (56) function_def -> . DEF IDENTIFIER LPAREN param_list_opt RPAREN statement_list END_KW
    (57) function_def -> . DEF IDENTIFIER param_list_opt statement_list END_KW
    (64) while_statement -> . WHILE expression statement_list END_KW
    (44) unless_statement -> . UNLESS expression statement_list else_block_opt END_KW
    (45) case_statement -> . CASE expression when_blocks else_block_opt END_KW

    PUTS            shift and go to state 13
    IDENTIFIER      shift and go to state 14
    LPAREN          shift and go to state 15
    MINUS           shift and go to state 16
    INTEGER         shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    SYMBOL_COLON    shift and go to state 20
    LBRACKET        shift and go to state 21
    LBRACE          shift and go to state 22
    IF              shift and go to state 23
    DEF             shift and go to state 24
    WHILE           shift and go to state 25
    UNLESS          shift and go to state 26
    CASE            shift and go to state 27

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    print                          shift and go to state 4
    input                          shift and go to state 5
    assignment                     shift and go to state 6
    expression                     shift and go to state 7
    if_statement                   shift and go to state 8
    function_def                   shift and go to state 9
    while_statement                shift and go to state 10
    unless_statement               shift and go to state 11
    case_statement                 shift and go to state 12

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . print
    (5) statement -> . input
    (6) statement -> . assignment
    (7) statement -> . expression
    (8) statement -> . if_statement
    (9) statement -> . function_def
    (10) statement -> . while_statement
    (11) statement -> . unless_statement
    (12) statement -> . case_statement
    (13) print -> . PUTS expression
    (14) input -> . IDENTIFIER ASSIGN GETS DOT IDENTIFIER
    (15) assignment -> . IDENTIFIER ASSIGN expression
    (16) assignment -> . IDENTIFIER PLUS_ASSIGN expression
    (17) assignment -> . IDENTIFIER MINUS_ASSIGN expression
    (18) assignment -> . IDENTIFIER TIMES_ASSIGN expression
    (19) assignment -> . IDENTIFIER DIVIDE_ASSIGN expression
    (20) assignment -> . IDENTIFIER OR_ASSIGN expression
    (21) assignment -> . IDENTIFIER AND_ASSIGN expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . MINUS expression
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression MODULO expression
    (29) expression -> . expression POWER expression
    (30) expression -> . INTEGER
    (31) expression -> . FLOAT
    (32) expression -> . STRING
    (33) expression -> . SYMBOL_COLON
    (34) expression -> . IDENTIFIER
    (35) expression -> . expression LOGICAL_AND expression
    (36) expression -> . expression LOGICAL_OR expression
    (37) expression -> . expression EQUAL_EQUAL expression
    (38) expression -> . expression NOT_EQUAL expression
    (39) expression -> . expression GREATER_THAN expression
    (40) expression -> . expression LESS_THAN expression
    (41) expression -> . expression GREATER_EQUAL expression
    (42) expression -> . expression LESS_EQUAL expression
    (65) expression -> . LBRACKET elements RBRACKET
    (69) expression -> . LBRACE hash_content RBRACE
    (43) if_statement -> . IF expression statement_list elsif_blocks_opt else_block_opt END_KW
    (56) function_def -> . DEF IDENTIFIER LPAREN param_list_opt RPAREN statement_list END_KW
    (57) function_def -> . DEF IDENTIFIER param_list_opt statement_list END_KW
    (64) while_statement -> . WHILE expression statement_list END_KW
    (44) unless_statement -> . UNLESS expression statement_list else_block_opt END_KW
    (45) case_statement -> . CASE expression when_blocks else_block_opt END_KW

    $end            reduce using rule 1 (program -> statement_list .)
    PUTS            shift and go to state 13
    IDENTIFIER      shift and go to state 14
    LPAREN          shift and go to state 15
    MINUS           shift and go to state 16
    INTEGER         shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    SYMBOL_COLON    shift and go to state 20
    LBRACKET        shift and go to state 21
    LBRACE          shift and go to state 22
    IF              shift and go to state 23
    DEF             shift and go to state 24
    WHILE           shift and go to state 25
    UNLESS          shift and go to state 26
    CASE            shift and go to state 27

    statement                      shift and go to state 28
    print                          shift and go to state 4
    input                          shift and go to state 5
    assignment                     shift and go to state 6
    expression                     shift and go to state 7
    if_statement                   shift and go to state 8
    function_def                   shift and go to state 9
    while_statement                shift and go to state 10
    unless_statement               shift and go to state 11
    case_statement                 shift and go to state 12

state 3

    (3) statement_list -> statement .

    PUTS            reduce using rule 3 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 3 (statement_list -> statement .)
    LPAREN          reduce using rule 3 (statement_list -> statement .)
    MINUS           reduce using rule 3 (statement_list -> statement .)
    INTEGER         reduce using rule 3 (statement_list -> statement .)
    FLOAT           reduce using rule 3 (statement_list -> statement .)
    STRING          reduce using rule 3 (statement_list -> statement .)
    SYMBOL_COLON    reduce using rule 3 (statement_list -> statement .)
    LBRACKET        reduce using rule 3 (statement_list -> statement .)
    LBRACE          reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    DEF             reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    UNLESS          reduce using rule 3 (statement_list -> statement .)
    CASE            reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    ELSIF           reduce using rule 3 (statement_list -> statement .)
    ELSE            reduce using rule 3 (statement_list -> statement .)
    END_KW          reduce using rule 3 (statement_list -> statement .)
    WHEN            reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> print .

    PUTS            reduce using rule 4 (statement -> print .)
    IDENTIFIER      reduce using rule 4 (statement -> print .)
    LPAREN          reduce using rule 4 (statement -> print .)
    MINUS           reduce using rule 4 (statement -> print .)
    INTEGER         reduce using rule 4 (statement -> print .)
    FLOAT           reduce using rule 4 (statement -> print .)
    STRING          reduce using rule 4 (statement -> print .)
    SYMBOL_COLON    reduce using rule 4 (statement -> print .)
    LBRACKET        reduce using rule 4 (statement -> print .)
    LBRACE          reduce using rule 4 (statement -> print .)
    IF              reduce using rule 4 (statement -> print .)
    DEF             reduce using rule 4 (statement -> print .)
    WHILE           reduce using rule 4 (statement -> print .)
    UNLESS          reduce using rule 4 (statement -> print .)
    CASE            reduce using rule 4 (statement -> print .)
    $end            reduce using rule 4 (statement -> print .)
    ELSIF           reduce using rule 4 (statement -> print .)
    ELSE            reduce using rule 4 (statement -> print .)
    END_KW          reduce using rule 4 (statement -> print .)
    WHEN            reduce using rule 4 (statement -> print .)


state 5

    (5) statement -> input .

    PUTS            reduce using rule 5 (statement -> input .)
    IDENTIFIER      reduce using rule 5 (statement -> input .)
    LPAREN          reduce using rule 5 (statement -> input .)
    MINUS           reduce using rule 5 (statement -> input .)
    INTEGER         reduce using rule 5 (statement -> input .)
    FLOAT           reduce using rule 5 (statement -> input .)
    STRING          reduce using rule 5 (statement -> input .)
    SYMBOL_COLON    reduce using rule 5 (statement -> input .)
    LBRACKET        reduce using rule 5 (statement -> input .)
    LBRACE          reduce using rule 5 (statement -> input .)
    IF              reduce using rule 5 (statement -> input .)
    DEF             reduce using rule 5 (statement -> input .)
    WHILE           reduce using rule 5 (statement -> input .)
    UNLESS          reduce using rule 5 (statement -> input .)
    CASE            reduce using rule 5 (statement -> input .)
    $end            reduce using rule 5 (statement -> input .)
    ELSIF           reduce using rule 5 (statement -> input .)
    ELSE            reduce using rule 5 (statement -> input .)
    END_KW          reduce using rule 5 (statement -> input .)
    WHEN            reduce using rule 5 (statement -> input .)


state 6

    (6) statement -> assignment .

    PUTS            reduce using rule 6 (statement -> assignment .)
    IDENTIFIER      reduce using rule 6 (statement -> assignment .)
    LPAREN          reduce using rule 6 (statement -> assignment .)
    MINUS           reduce using rule 6 (statement -> assignment .)
    INTEGER         reduce using rule 6 (statement -> assignment .)
    FLOAT           reduce using rule 6 (statement -> assignment .)
    STRING          reduce using rule 6 (statement -> assignment .)
    SYMBOL_COLON    reduce using rule 6 (statement -> assignment .)
    LBRACKET        reduce using rule 6 (statement -> assignment .)
    LBRACE          reduce using rule 6 (statement -> assignment .)
    IF              reduce using rule 6 (statement -> assignment .)
    DEF             reduce using rule 6 (statement -> assignment .)
    WHILE           reduce using rule 6 (statement -> assignment .)
    UNLESS          reduce using rule 6 (statement -> assignment .)
    CASE            reduce using rule 6 (statement -> assignment .)
    $end            reduce using rule 6 (statement -> assignment .)
    ELSIF           reduce using rule 6 (statement -> assignment .)
    ELSE            reduce using rule 6 (statement -> assignment .)
    END_KW          reduce using rule 6 (statement -> assignment .)
    WHEN            reduce using rule 6 (statement -> assignment .)


state 7

    (7) statement -> expression .
    (24) expression -> expression . PLUS expression
    (25) expression -> expression . MINUS expression
    (26) expression -> expression . TIMES expression
    (27) expression -> expression . DIVIDE expression
    (28) expression -> expression . MODULO expression
    (29) expression -> expression . POWER expression
    (35) expression -> expression . LOGICAL_AND expression
    (36) expression -> expression . LOGICAL_OR expression
    (37) expression -> expression . EQUAL_EQUAL expression
    (38) expression -> expression . NOT_EQUAL expression
    (39) expression -> expression . GREATER_THAN expression
    (40) expression -> expression . LESS_THAN expression
    (41) expression -> expression . GREATER_EQUAL expression
    (42) expression -> expression . LESS_EQUAL expression
